Added h1 and footer to body

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Weather App</title>
   </head>
-  <body></body>
+  <body>
+    <h1>What is the weather today</h1>
+    <footer>Coded by Marissa Mares</footer>
+  </body>
 </html>
