--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>My Weather App</title>
   </head>
   <body>
-    <h1>What is the weather today</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city.." />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Los Angeles</h1>
+        <p>
+          Tuesday 14:49, scattered clouds
+          <br />
+          Humidity: 66%, Wind: 5 mph
+        </p>
+      </div>
+      <div>🌥 60º F</div>
+    </main>
     <footer>Coded by Marissa Mares</footer>
   </body>
 </html>
