--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,400;0,500;0,700;1,300;1,500;1,700&display=swap" rel="stylesheet">
     <title>My Weather App</title>
   </head>
   <body>
+    <div class="weather-app">
     <header>
       <form>
         <input type="search" placeholder="Enter a city.." />
@@ -23,6 +28,10 @@
       </div>
       <div>🌥 60º F</div>
     </main>
-    <footer>Coded by Marissa Mares</footer>
+  
+    <footer>Coded by Marissa Mares
+
+    </footer>
+    
   </body>
 </html>
