--- a/index.html
+++ b/index.html
@@ -12,21 +12,28 @@
   <body>
     <div class="weather-app">
     <header>
-      <form>
-        <input type="search" placeholder="Enter a city.." />
-        <input type="submit" value="Search" />
+      <form class="search-form">
+        <input type="search" placeholder="Enter a city.." required class="search-form-input" />
+        <input type="submit" value="Search" class="search-form-button"/>
       </form>
     </header>
     <main>
+      <div class="weather-app-data">
       <div>
-        <h1>Los Angeles</h1>
-        <p>
+        <h1 class="weather-app-city">Los Angeles</h1>
+        <p class="weather-app-details">
           Tuesday 14:49, scattered clouds
           <br />
-          Humidity: 66%, Wind: 5 mph
+          Humidity: <strong> 66%</strong>, Wind: <strong> 5mph</strong>
         </p>
       </div>
-      <div>🌥 60º F</div>
+      <div class="weather-app-temperature-container"> 
+        <div class="weather-app-icon>">🌥</div>
+        <div class="weather-app-temperature">65</div>
+        <div class="weather-app-unit">ºF</div>
+ 
+      </div>
+    </div>
     </main>
   
     <footer>Coded by Marissa Mares
