--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
       <div class="weather-app-data">
       <div>
-        <h1 class="weather-app-city" id="city">Los Angeles</h1>
+        <h1 class="weather-app-city" id="city"></h1>
         <p class="weather-app-details">
           Tuesday 14:49, scattered clouds
           <br />
@@ -34,7 +34,7 @@
       </div>
       <div class="weather-app-temperature-container"> 
         <div class="weather-app-icon>">🌥</div>
-        <div class="weather-app-temperature">65</div>
+        <div class="weather-app-temperature" id="temperature"></div>
         <div class="weather-app-unit">ºF</div>
  
       </div>
