injected more weather data

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
       <div>
         <h1 class="weather-app-city" id="city"></h1>
         <p class="weather-app-details">
-          Tuesday 14:49, scattered clouds
+          <span id="time"></span>
+          <span id="description"></span>
           <br />
-          Humidity: <strong> 66%</strong>, Wind: <strong> 5mph</strong>
+          Humidity: <strong id="humidity"> 66%</strong>, Wind: 
+          <strong id="wind-speed"> 5mph</strong>
         </p>
       </div>
       <div class="weather-app-temperature-container"> 
