--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
         </p>
       </div>
       <div class="weather-app-temperature-container"> 
-        <div class="weather-app-icon>">🌥</div>
+        <div id="icon">
+        
+          <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
+          class="weather-app-icon>" />
+        </div>
         <div class="weather-app-temperature" id="temperature"></div>
         <div class="weather-app-unit">ºF</div>
  
