--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
     </div>
     </main>
   
-    <footer>Coded by Marissa Mares
+    <footer>This project was coded by
+      <a href="https://github.com/mmares1519" target="_blank"> Marissa Mares</a>
+      is 
+      <a href="https://github.com/mmares1519?tab=repositories" target="_blank">opened-sourced on GitHub</a> 
+      on 
+      <a href="https://app.netlify.com/teams/mmares1519/overview" target="_blank"> and hosted on Netlify</a>
 
     </footer>
     <script src="src/index.js"></script>
