added the forecast HTML from JS

--- a/index.html
+++ b/index.html
@@ -51,23 +51,25 @@
           </div>
         </div>
       </main>
-      <div class="weather-forecast">
-        <div class="row">
-          <div class="col-2">
-            <div class="weather-forecast-date">Tue</div>
-            <img
-              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
-              alt=""
-              width="42"
-            />
-            <div class="weather-forecast-temperatures">
-              <span class="weather-forecast-temperature-max">18º</span>
-              <span class="weather-forecast-temperature-min">12º</span>
-            </div>
+      <div class="weather-forecast" id="forecast">
+        <div class="weather-forecast-day"></div>
+        <div class="weather-forecast-date">Tue</div>
+        <div class="weather-forecast-icon">
+          <img
+            src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
+            alt=""
+            width="42"
+          />
+        </div>
+        <div class="weather-forecast-temperatures">
+          <div class="weather-forecast-temperature">
+            <strong>18º</strong>
           </div>
+          <div class="weather-forecast-temperature">9º</div>
         </div>
       </div>
     </div>
+
     <footer>
       This project was coded by
       <a href="https://github.com/mmares1519" target="_blank"> Marissa Mares</a>
